--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,4 @@
-name: Deploy Docker Image from Docker Hub
+name: Deploy Flask App to Docker Hub
 
 on:
   push:
@@ -6,18 +6,31 @@ on:
       - main
 
 jobs:
-  deploy:
+  build-and-push:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Log in to Docker Hub
-        uses: docker/login-action@v3
-        with:
-          username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_PASSWORD }}
+    - name: Checkout code
+      uses: actions/checkout@v4
 
-      - name: Pull Docker image from Docker Hub
-        run: docker pull ${{ secrets.DOCKER_USERNAME }}/myphp3:latest
+    - name: Set up Docker Buildx
+      uses: docker/setup-buildx-action@v3
 
-      - name: Run container
-        run: docker run -d -p 5000:5000 ${{ secrets.DOCKER_USERNAME }}/myphp3:latest
+    - name: Log in to Docker Hub
+      uses: docker/login-action@v3
+      with:
+        username: ${{ secrets.DOCKER_USERNAME }}
+        password: ${{ secrets.DOCKER_PASSWORD }}
+
+    - name: Build and push Flask image
+      uses: docker/build-push-action@v6
+      with:
+        context: .
+        file: ./Dockerfile
+        push: true
+        tags: ${{ secrets.DOCKER_USERNAME }}/examen_cicd:latest
+
+    - name: Verify image push
+      run: |
+        docker pull ${{ secrets.DOCKER_USERNAME }}/examen_cicd:latest
+        echo "Flask image successfully pushed to Docker Hub"
